; ModuleID = '/home/carl/AnghaBench/freebsd/sys/cddl/contrib/opensolaris/uts/common/fs/zfs/extr_skein_zfs.c_abd_checksum_skein_native.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/cddl/contrib/opensolaris/uts/common/fs/zfs/extr_skein_zfs.c_abd_checksum_skein_native.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@skein_incremental = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @abd_checksum_skein_native(i32* %0, i32 %1, i8* %2, i32* %3) #0 {
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i8*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i32, align 4
  store i32* %0, i32** %5, align 8
  store i32 %1, i32* %6, align 4
  store i8* %2, i8** %7, align 8
  store i32* %3, i32** %8, align 8
  %10 = load i8*, i8** %7, align 8
  %11 = icmp ne i8* %10, null
  %12 = zext i1 %11 to i32
  %13 = call i32 @ASSERT(i32 %12)
  %14 = load i8*, i8** %7, align 8
  %15 = call i32 @bcopy(i8* %14, i32* %9, i32 4)
  %16 = load i32*, i32** %5, align 8
  %17 = load i32, i32* %6, align 4
  %18 = load i32, i32* @skein_incremental, align 4
  %19 = call i32 @abd_iterate_func(i32* %16, i32 0, i32 %17, i32 %18, i32* %9)
  %20 = load i32*, i32** %8, align 8
  %21 = call i32 @Skein_512_Final(i32* %9, i32* %20)
  %22 = call i32 @bzero(i32* %9, i32 4)
  ret void
}

declare dso_local i32 @ASSERT(i32) #1

declare dso_local i32 @bcopy(i8*, i32*, i32) #1

declare dso_local i32 @abd_iterate_func(i32*, i32, i32, i32, i32*) #1

declare dso_local i32 @Skein_512_Final(i32*, i32*) #1

declare dso_local i32 @bzero(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
